# NeoZorK3

./: .gitignore  CMakeLists.txt  CMakeLists_local.txt  CMakeLists_windows.txt  NeoZorK-config.example  README.md  SECURITY.md  build.sh  build_windows.bat  build_windows.ps1  config.json.example  config.production.json  config.testnet.json  env.example  smart_airdrop.py  start_testnet_trading.sh  testnet-wallet.json  testnet-wallet.pubkey  tools.sh
.cache/clangd/index/: abi_macros.hpp.AFC4ECD76A31D49B.idx  adl_serializer.hpp.2CE8C50AC0EC85EC.idx  arbitrage_engine.cpp.0D889A8ACECD4757.idx  arbitrage_engine.h.E883997885E8A166.idx  begin.hpp.F94349393DCFBFC1.idx  binary_reader.hpp.5AA619B272DBE7A6.idx  binary_writer.hpp.8669ADB983BA699B.idx  blockchain_adapters.cpp.3243FAD048A73160.idx  blockchain_adapters.h.E9005D63ABEE49E6.idx  byte_container_with_subtype.hpp.7A243A457BDFEAFC.idx  cli_parser.cpp.5F2E972F930D2BF5.idx  cli_parser.h.B21F51EDA3C20B60.idx  command_handlers.cpp.8E8CE70EF0D093E3.idx  command_handlers.h.423200A720397FDF.idx  config_manager.cpp.1D05DC3F233A73FD.idx  config_manager.h.EEE8AB0BB0836EBF.idx  connection_manager.cpp.2DF899C67849594E.idx  connection_manager.h.A5E3F2DC4EA01A29.idx  cpp_future.hpp.3026A178A37BDDE5.idx  detected.hpp.6CC1C13B1D900DEC.idx  end.hpp.A2E0C30BACEC4752.idx  endpoint_discovery.cpp.3FBB6ABE1EF506B8.idx  endpoint_discovery.h.2F540377C4FB3E63.idx  endpoint_scanner.cpp.109A2973DFFB4129.idx  endpoint_scanner.h.A45C3EFDB32F0B66.idx  exceptions.hpp.B32590639ED3628F.idx  from_json.hpp.A9B5CADA803BD39E.idx  hash.hpp.02F405F411CE1E58.idx  hedley.hpp.60E40A8636F26B3F.idx  hedley_undef.hpp.824F9AB7DF90A316.idx  httplib.h.33312DF00528AD1C.idx  identity_tag.hpp.2261EBA8E3B24E2C.idx  input_adapters.hpp.365EDEE355A8FA7F.idx  internal_iterator.hpp.FB3D6521C68604B8.idx  is_sax.hpp.F660A38A985CCEED.idx  iter_impl.hpp.A4050D4BDE8F6E91.idx  iteration_proxy.hpp.509BB4DA955A2703.idx  iterator_traits.hpp.9E65DE3CD8B5E3B4.idx  json.hpp.FE7BA819A2623AA0.idx  json_custom_base_class.hpp.37F8CB10E0D5BE9E.idx  (+41 more)
.github/workflows/: ci.yml
docs/: AIRDROP_SOLUTIONS_SUMMARY.md  AVOID_429_ERRORS.md  BUILD_INSTRUCTIONS.md  DOCUMENTATION_UPDATE_REPORT.md  QUICK_START.md  README.md  README_ru.md  REAL_TRADING_SETUP.md
docs/en/: ALPINE_COMPATIBILITY.md  BUILD_INSTRUCTIONS.md  IMPLEMENTATION_STATUS.md  LINUX_COMPATIBILITY.md  PLATFORM_COMPATIBILITY.md  PROJECT_PLAN.md  QUICK_START.md  QUICK_START_REAL_TRADING.md  QUICK_START_TESTNET.md  TESTNET_FAUCET_GUIDE.md  TESTNET_GUIDE.md  WINDOWS_COMPATIBILITY.md
docs/ru/: ALPINE_COMPATIBILITY.md  LINUX_COMPATIBILITY.md  PLATFORM_COMPATIBILITY.md  WINDOWS_COMPATIBILITY.md
include/: arbitrage_engine.h  blockchain_adapters.h  cli_parser.h  cli_parser.hpp  command_handler.hpp  command_handlers.h  config_manager.h  config_manager.hpp  connection_manager.h  connection_manager.hpp  endpoint_discovery.h  endpoint_scanner.h  http_client.hpp  logger.h  logger.hpp  main.h  market_data_provider.h  order_manager.h  risk_manager.h  string_utils.hpp  types.h  ui.h  version.h  windows_compat.h  ws_client.hpp
src/: CMakeLists.txt  arbitrage_engine.cpp  blockchain_adapters.cpp  cli_parser.cpp  command_handlers.cpp  config_manager.cpp  connection_manager.cpp  endpoint_discovery.cpp  endpoint_scanner.cpp  logger.cpp  main.cpp  market_data_provider.cpp  order_manager.cpp  risk_manager.cpp  ui.cpp  windows_compat.cpp
tests/: CMakeLists.txt  test_arbitrage_engine.cpp  test_basic.cpp  test_blockchain_adapters.cpp  test_market_data_provider.cpp  test_order_manager.cpp  test_risk_manager.cpp  test_windows_compatibility.cpp
tools/: README.md  run_tool.py
tools/demos/: demo_airdrop_solutions.py  demo_arbitrage.py  final_demo.py  real_demo.py  simple_demo.py  testnet_demo.py  testnet_faucet.py
tools/scripts/: quick_airdrop.sh  start_real_trading.sh  start_testnet_trading.sh
